// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer render amp legacy media player 1`] = `
.emotion-0 {
  margin-top: 0.5rem;
}

@media (max-width: 24.9375rem) {
  .emotion-0 {
    margin-top: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    margin-top: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-4 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.emotion-6 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
  >
    <figure
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          scrolling="no"
          src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/russian/multimedia/2016/05/160505_v_diving_record/p01kx42v/en-GB/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg"
            srcset="ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 240w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 320w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 480w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 624w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 800w"
            width="9"
          />
          <noscript />
        </amp-iframe>
      </div>
    </figure>
  </div>
</div>
`;

exports[`MediaPlayer render canonical legacy media player 1`] = `
.emotion-0 {
  margin-top: 0.5rem;
}

@media (max-width: 24.9375rem) {
  .emotion-0 {
    margin-top: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    margin-top: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-4 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.emotion-6 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.emotion-8 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
  >
    <figure
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <iframe
          allow="autoplay"
          allowfullscreen=""
          class="emotion-8 emotion-9"
          scrolling="no"
          src="https://test.bbc.com/ws/av-embeds/cps/russian/multimedia/2016/05/160505_v_diving_record/p01kx42v/en-GB"
          title="Media player"
        />
        <noscript />
      </div>
    </figure>
  </div>
</div>
`;

exports[`MediaPlayer render the amp player 1`] = `
.emotion-0 {
  margin-top: 0.5rem;
}

@media (max-width: 24.9375rem) {
  .emotion-0 {
    margin-top: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    margin-top: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-4 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.emotion-6 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
  >
    <figure
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          scrolling="no"
          src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/pidgin/123456789/p01kx42v/en-GB/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg"
            srcset="ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 240w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 320w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 480w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 624w, ichef.test.bbci.co.uk/images/ic/$widthxn/p01kx435.jpg 800w"
            width="9"
          />
          <noscript />
        </amp-iframe>
      </div>
    </figure>
  </div>
</div>
`;

exports[`MediaPlayer render the canonical player without a placeholder 1`] = `
.emotion-0 {
  margin-top: 0.5rem;
}

@media (max-width: 24.9375rem) {
  .emotion-0 {
    margin-top: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    margin-top: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-4 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.emotion-6 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.emotion-8 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
  >
    <figure
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <iframe
          allow="autoplay"
          allowfullscreen=""
          class="emotion-8 emotion-9"
          scrolling="no"
          src="https://test.bbc.com/ws/av-embeds/cps/pidgin/123456789/p01kx42v/en-GB"
          title="Media player"
        />
        <noscript />
      </div>
    </figure>
  </div>
</div>
`;
